feat: 运行时数据库可移植性改造（新增 workflow-database 方言模块与 MySQL 实库回归），移动端表单分页布局与表单发布会话支持
- 新增 integration/workflow-database 数据库标准与七种产品方言（MySQL/Oracle/PostgreSQL/Kingbase/达梦/OceanBase），主代码收敛大文本为 String，复杂 SQL 保留方言
- 新增 39 个 MySql*DatabaseTest 实库测试与分页/LOB/多值权限等契约测试；普通查询改用 MyBatis-Plus，新增 FlowableDatabaseConfiguration 与 config/database 装配包
- 移动端：新增表单分页渲染（MobileFormPages）、字段布局（mobileFieldLayout）与表单发布会话（formReleaseSession），Inbox/ProcessDetail/ProcessDiagram 同步适配
- 更新 database-portability-progress 进度文档与 AGENTS.md